# Climate-AgriTech-MLOps

./: .gitignore  README.md  api.py  demo.py  pyproject.toml
airflow_home/: airflow.cfg  airflow.db  standalone_admin_password.txt
artifacts/: modelo_final.joblib  preprocessor.joblib
climate_agritech_mlops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dags/: dags.py
data/: pipeline.py  pyproject.toml
model/: model.py
service/: api.py  dags.py  demo.py
tmp/: cleaned_data.csv
