[project]
name = "esi_mlops"
version = "0.0.1"
description = "AgroTech - Pipeline de Dados"
authors = [
    {name = "Amir Chistofer",email = "email.."}
]

requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "mlcroissant (>=3.1.44,<4.0.0)",
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
